src/App.css
.App {
}

.main-container{
  display: flex;
  flex-direction: row;
}

.button-container{
  display: flex;
  flex-direction: column;
  flex: 1;
}

.controls-container{
  display: flex;
  flex-direction: column;
  flex: 1;
}

.sudoku-grid-container{
  justify-content: center;
  flex-grow:1;
  flex: 1;
}

.buttons{
  text-align: center;
  flex-grow:1;
}

.puzzle-info{
  text-align: left;
  flex-grow:1;
  flex: 1;
}

.spinner{
  position: absolute;
  left: 50%;
  top: 50%;
  z-index: 1;
}

.sudoku-grid{
  border-collapse: collapse;
  margin: 0 auto;
  height:70%;
  width:33%;
}

.sudoku-grid tbody tr td:not(.pencilCell){
  border: 1px solid;
  border-color: blue;
  padding: 1px;
}

/* set 1st column left border */
.sudoku-grid tbody tr td:nth-child(1):not(.pencilCell){
  border-left: 3px solid;
}

/* right border for every 3rd td */
.sudoku-grid tbody tr td:nth-child(3n):not(.pencilCell){
  border-right: 3px solid;
}

/* top border for first row */
.sudoku-grid tbody tr:nth-child(1):not(.pencilCell){
  border-top: 3px solid;
}

/* bottom border for every 3rd tr row */
.sudoku-grid tbody tr:nth-child(3n):not(.pencilCell){
  border-bottom: 3px solid;
}

.buttonSelected {
  border: 5px solid #010191;
}

.pencilCandidate{
  padding: 20px;
  border: 1px solid;
}

.pencilCandidateSelected {
  padding: 20px;
  margin: 0px;
  border: 5px solid  #010191;
}

.pencilGrid{
  border: 0px none;
  z-index: 5;
  position: absolute;
  left:0;
  top:0;
  opacity: 40%;
  width:100%;
}

.pencilCell{
  border:0;
  width:33%;
}

.cellValue{
  z-index: 10;
  position:relative;
  height:100%;
  vertical-align: top;
}

.label{
  font-size: 30pt;
  height:100%;
  vertical-align: top;
}
.cell {
  height: 65px;
  width: 65px;
  font-size: 18px;
}

